src/antlr/ChartDSLParser.py
# Generated from ChartDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChartDSLParser ( Parser ):

    grammarFileName = "ChartDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'with'", "'from'", "'chart:'", "'compare'", 
                     "'for'", "'differences'", "'contrast'", "'versus'", 
                     "'split by'", "'grouped by'", "'differences within'", 
                     "'show'", "'stacked by'", "'subgroups'", "'show correlation between'", 
                     "'and'", "'log'", "'show proportion of'", "'by'", "'show share of'", 
                     "'show percentage of'", "'show frequency of'", "'show distribution of'", 
                     "'show frequency in'", "'buckets'", "'accumulation of'", 
                     "'stacked trend of'", "'scatter plot of'", "'pattern of'", 
                     "'bubble of'", "','", "'at'", "'='", "'to'", "'while'", 
                     "'('", "')'", "':'", "'if'", "'!'", "'or'", "'+'", 
                     "'-'", "'*'", "'/'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'progression of'", "'trend of'", "'growth of'", 
                     "'BEGIN'", "'END'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "START_PROGRAM", 
                      "END_PROGRAM", "IDENTIFIER", "WS" ]

    RULE_command = 0
    RULE_chartFunction = 1
    RULE_table = 2
    RULE_data = 3
    RULE_var = 4
    RULE_definition = 5
    RULE_continuousIdentifier = 6
    RULE_range = 7
    RULE_loop = 8
    RULE_conditionalStatement = 9
    RULE_condition = 10
    RULE_logicalOperation = 11
    RULE_operationBody = 12
    RULE_operation = 13
    RULE_operationSign = 14
    RULE_logicalOperationSign = 15
    RULE_subgroup = 16
    RULE_cases = 17
    RULE_trendKeyword = 18

    ruleNames =  [ "command", "chartFunction", "table", "data", "var", "definition", 
                   "continuousIdentifier", "range", "loop", "conditionalStatement", 
                   "condition", "logicalOperation", "operationBody", "operation", 
                   "operationSign", "logicalOperationSign", "subgroup", 
                   "cases", "trendKeyword" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    START_PROGRAM=55
    END_PROGRAM=56
    IDENTIFIER=57
    WS=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START_PROGRAM(self):
            return self.getToken(ChartDSLParser.START_PROGRAM, 0)

        def data(self):
            return self.getTypedRuleContext(ChartDSLParser.DataContext,0)


        def table(self):
            return self.getTypedRuleContext(ChartDSLParser.TableContext,0)


        def chartFunction(self):
            return self.getTypedRuleContext(ChartDSLParser.ChartFunctionContext,0)


        def END_PROGRAM(self):
            return self.getToken(ChartDSLParser.END_PROGRAM, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ChartDSLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(ChartDSLParser.START_PROGRAM)
            self.state = 39
            self.match(ChartDSLParser.T__0)
            self.state = 40
            self.data()
            self.state = 41
            self.match(ChartDSLParser.T__1)
            self.state = 42
            self.table()
            self.state = 43
            self.match(ChartDSLParser.T__2)
            self.state = 44
            self.chartFunction()
            self.state = 45
            self.match(ChartDSLParser.END_PROGRAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChartFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.VarContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.VarContext,i)


        def cases(self):
            return self.getTypedRuleContext(ChartDSLParser.CasesContext,0)


        def subgroup(self):
            return self.getTypedRuleContext(ChartDSLParser.SubgroupContext,0)


        def continuousIdentifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.ContinuousIdentifierContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.ContinuousIdentifierContext,i)


        def trendKeyword(self):
            return self.getTypedRuleContext(ChartDSLParser.TrendKeywordContext,0)


        def range_(self):
            return self.getTypedRuleContext(ChartDSLParser.RangeContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_chartFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChartFunction" ):
                listener.enterChartFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChartFunction" ):
                listener.exitChartFunction(self)




    def chartFunction(self):

        localctx = ChartDSLParser.ChartFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_chartFunction)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(ChartDSLParser.T__3)
                self.state = 48
                self.var()
                self.state = 49
                self.match(ChartDSLParser.T__4)
                self.state = 50
                self.cases()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(ChartDSLParser.T__5)
                self.state = 53
                self.var()
                self.state = 54
                self.match(ChartDSLParser.T__4)
                self.state = 55
                self.cases()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.match(ChartDSLParser.T__6)
                self.state = 58
                self.var()
                self.state = 59
                self.match(ChartDSLParser.T__4)
                self.state = 60
                self.cases()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.match(ChartDSLParser.T__7)
                self.state = 63
                self.var()
                self.state = 64
                self.match(ChartDSLParser.T__4)
                self.state = 65
                self.cases()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 67
                self.match(ChartDSLParser.T__3)
                self.state = 68
                self.var()
                self.state = 69
                self.match(ChartDSLParser.T__8)
                self.state = 70
                self.subgroup()
                self.state = 71
                self.match(ChartDSLParser.T__4)
                self.state = 72
                self.cases()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.match(ChartDSLParser.T__3)
                self.state = 75
                self.var()
                self.state = 76
                self.match(ChartDSLParser.T__9)
                self.state = 77
                self.subgroup()
                self.state = 78
                self.match(ChartDSLParser.T__4)
                self.state = 79
                self.cases()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 81
                self.match(ChartDSLParser.T__10)
                self.state = 82
                self.subgroup()
                self.state = 83
                self.match(ChartDSLParser.T__4)
                self.state = 84
                self.cases()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.match(ChartDSLParser.T__11)
                self.state = 87
                self.var()
                self.state = 88
                self.match(ChartDSLParser.T__12)
                self.state = 89
                self.subgroup()
                self.state = 90
                self.match(ChartDSLParser.T__4)
                self.state = 91
                self.cases()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 93
                self.match(ChartDSLParser.T__11)
                self.state = 94
                self.var()
                self.state = 95
                self.match(ChartDSLParser.T__13)
                self.state = 96
                self.subgroup()
                self.state = 97
                self.match(ChartDSLParser.T__4)
                self.state = 98
                self.cases()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 100
                self.match(ChartDSLParser.T__14)
                self.state = 101
                self.continuousIdentifier()
                self.state = 102
                self.match(ChartDSLParser.T__15)
                self.state = 103
                self.continuousIdentifier()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 105
                self.match(ChartDSLParser.T__16)
                self.state = 106
                self.trendKeyword()
                self.state = 107
                self.continuousIdentifier()
                self.state = 108
                self.match(ChartDSLParser.T__1)
                self.state = 109
                self.range_()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                self.match(ChartDSLParser.T__17)
                self.state = 112
                self.var()
                self.state = 113
                self.match(ChartDSLParser.T__18)
                self.state = 114
                self.cases()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 116
                self.match(ChartDSLParser.T__19)
                self.state = 117
                self.var()
                self.state = 118
                self.match(ChartDSLParser.T__18)
                self.state = 119
                self.cases()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 121
                self.match(ChartDSLParser.T__20)
                self.state = 122
                self.var()
                self.state = 123
                self.match(ChartDSLParser.T__18)
                self.state = 124
                self.cases()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 126
                self.match(ChartDSLParser.T__21)
                self.state = 127
                self.var()
                self.state = 128
                self.match(ChartDSLParser.T__18)
                self.state = 129
                self.range_()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 131
                self.match(ChartDSLParser.T__22)
                self.state = 132
                self.var()
                self.state = 133
                self.match(ChartDSLParser.T__18)
                self.state = 134
                self.range_()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 136
                self.match(ChartDSLParser.T__23)
                self.state = 137
                self.range_()
                self.state = 138
                self.match(ChartDSLParser.T__24)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 140
                self.match(ChartDSLParser.T__25)
                self.state = 141
                self.continuousIdentifier()
                self.state = 142
                self.match(ChartDSLParser.T__4)
                self.state = 143
                self.cases()
                self.state = 144
                self.match(ChartDSLParser.T__1)
                self.state = 145
                self.range_()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 147
                self.match(ChartDSLParser.T__26)
                self.state = 148
                self.continuousIdentifier()
                self.state = 149
                self.match(ChartDSLParser.T__4)
                self.state = 150
                self.cases()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 152
                self.match(ChartDSLParser.T__27)
                self.state = 153
                self.var()
                self.state = 154
                self.match(ChartDSLParser.T__15)
                self.state = 155
                self.var()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 157
                self.match(ChartDSLParser.T__28)
                self.state = 158
                self.var()
                self.state = 159
                self.match(ChartDSLParser.T__15)
                self.state = 160
                self.var()
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 162
                self.match(ChartDSLParser.T__29)
                self.state = 163
                self.var()
                self.state = 164
                self.match(ChartDSLParser.T__30)
                self.state = 165
                self.var()
                self.state = 166
                self.match(ChartDSLParser.T__30)
                self.state = 167
                self.var()
                self.state = 168
                self.match(ChartDSLParser.T__4)
                self.state = 169
                self.cases()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)




    def table(self):

        localctx = ChartDSLParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_table)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.VarContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.VarContext,i)


        def continuousIdentifier(self):
            return self.getTypedRuleContext(ChartDSLParser.ContinuousIdentifierContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)




    def data(self):

        localctx = ChartDSLParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_data)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.continuousIdentifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.var()
                self.state = 178
                self.match(ChartDSLParser.T__31)
                self.state = 179
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = ChartDSLParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(ChartDSLParser.VarContext,0)


        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def continuousIdentifier(self):
            return self.getTypedRuleContext(ChartDSLParser.ContinuousIdentifierContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = ChartDSLParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definition)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.var()
                self.state = 186
                self.match(ChartDSLParser.T__32)
                self.state = 187
                self.match(ChartDSLParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.var()
                self.state = 190
                self.match(ChartDSLParser.T__32)
                self.state = 191
                self.continuousIdentifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuousIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def continuousIdentifier(self):
            return self.getTypedRuleContext(ChartDSLParser.ContinuousIdentifierContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_continuousIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuousIdentifier" ):
                listener.enterContinuousIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuousIdentifier" ):
                listener.exitContinuousIdentifier(self)




    def continuousIdentifier(self):

        localctx = ChartDSLParser.ContinuousIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_continuousIdentifier)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.match(ChartDSLParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.match(ChartDSLParser.IDENTIFIER)
                self.state = 197
                self.match(ChartDSLParser.T__30)
                self.state = 198
                self.continuousIdentifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ChartDSLParser.IDENTIFIER)
            else:
                return self.getToken(ChartDSLParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = ChartDSLParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(ChartDSLParser.IDENTIFIER)
            self.state = 202
            self.match(ChartDSLParser.T__33)
            self.state = 203
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ChartDSLParser.ConditionContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)




    def loop(self):

        localctx = ChartDSLParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self.match(ChartDSLParser.T__34)
            self.state = 206
            self.match(ChartDSLParser.T__35)
            self.state = 207
            self.condition(0)
            self.state = 208
            self.match(ChartDSLParser.T__36)
            self.state = 209
            self.match(ChartDSLParser.T__37)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ChartDSLParser.ConditionContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_conditionalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalStatement" ):
                listener.enterConditionalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalStatement" ):
                listener.exitConditionalStatement(self)




    def conditionalStatement(self):

        localctx = ChartDSLParser.ConditionalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conditionalStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.match(ChartDSLParser.T__38)
            self.state = 212
            self.match(ChartDSLParser.T__35)
            self.state = 213
            self.condition(0)
            self.state = 214
            self.match(ChartDSLParser.T__36)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOperation(self):
            return self.getTypedRuleContext(ChartDSLParser.LogicalOperationContext,0)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.ConditionContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.ConditionContext,i)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ChartDSLParser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_condition, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 224
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 217
                self.logicalOperation()
                pass

            elif la_ == 2:
                self.state = 218
                self.match(ChartDSLParser.T__39)
                self.state = 219
                self.condition(3)
                pass

            elif la_ == 3:
                self.state = 220
                self.match(ChartDSLParser.T__35)
                self.state = 221
                self.condition(0)
                self.state = 222
                self.match(ChartDSLParser.T__36)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 231
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ChartDSLParser.ConditionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                    self.state = 226
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 227
                    _la = self._input.LA(1)
                    if not(_la==16 or _la==41):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 228
                    self.condition(3) 
                self.state = 233
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LogicalOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.OperationBodyContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.OperationBodyContext,i)


        def logicalOperationSign(self):
            return self.getTypedRuleContext(ChartDSLParser.LogicalOperationSignContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_logicalOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOperation" ):
                listener.enterLogicalOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOperation" ):
                listener.exitLogicalOperation(self)




    def logicalOperation(self):

        localctx = ChartDSLParser.LogicalOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_logicalOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 234
            self.operationBody(0)
            self.state = 235
            self.logicalOperationSign()
            self.state = 236
            self.operationBody(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
